--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.1",
+    "@astrojs/rss": "^4.0.0",
     "astro": "^5.5.3",
     "gsap": "^3.12.7",
     "tailwindcss": "^4.1.1"
